Prevent CDN caching

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,4 +1,5 @@
 {
-  "/mix.js": "/mix.js",
-  "/css/app.css": "/css/app.css"
+  "/mix.js": "/mix.b2328beb0372c051d06d.js",
+  "/css/app.css": "/css/app.61e5d8db75301f0e11d4.css",
+  "css/app.css": "css/app.c05b93d6e05b76a4788c09f93bdde69f.css"
 }
